<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.branflake2267.archetypes</groupId>
  <artifactId>gxt-basic-3x</artifactId>
  <packaging>war</packaging>
  <version>1.0.0-SNAPSHOT</version>
  <name>gwt-basic-3x</name>
  <description>Very basic GXT maven setup</description>

  <properties>
    <!-- GXT -->
    <gxt.version>3.1.0</gxt.version>

    <!-- GWT -->
    <gwt.version>2.6.0</gwt.version>
    <gwt.style>OBF</gwt.style>

    <!-- Maven -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
  </properties>

  <build>
    <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.0</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>

      <!-- Skips the GWTTestCases during Junit Testing -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <excludes>
            <exclude>**/*GwtTest.java</exclude>
          </excludes>
        </configuration>
      </plugin>

      <!-- GWT -->
      <!-- 'mvn gwt:run' - runs development mode -->
      <!-- 'mvn gwt:debug' - runs debug mode -->
      <!-- 'mvn gwt:compile' - compiles gwt -->
      <!-- 'mvn gwt:test' or 'mvn integration-test' -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>${gwt.version}</version>
        <configuration>
          <testTimeOut>180</testTimeOut>
          <includes>**/*GwtTestSuite.java</includes>
          <excludes>**/*GwtTest.java</excludes>
          <mode>htmlunit</mode>

          <extraJvmArgs>-Xss1024K -Xmx1024M -XX:MaxPermSize=256M</extraJvmArgs>
          <logLevel>INFO</logLevel>
          <style>${gwt.style}</style>

          <copyWebapp>true</copyWebapp>
          <hostedWebapp>${webappDirectory}</hostedWebapp>

          <runTarget>Project.html</runTarget>
          <module>com.sencha.gxt.project.Project</module>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <!-- http://docs.sencha.com/gxt/3.1/getting_started/maven/Maven.html -->
      <!-- ~/.m2/settings.xml add <server/> with the support portal credentials -->
      <id>sencha-gxt-repository</id>
      <name>Sencha GXT Repository</name>

      <!-- Commercial (with Support) -->
      <!-- <url>https://maven.sencha.com/repo/gxt-commercial-release</url> -->
      <!-- <url>https://maven.sencha.com/repo/gxt-support-commercial-release</url> -->
      <!-- <url>https://maven.sencha.com/repo/gxt-commercial-snapshot</url> -->

      <!-- GPL -->
      <!-- <url>https://maven.sencha.com/repo/gxt-gpl-release</url> -->
      <!-- <url>https://maven.sencha.com/repo/gxt-gpl-snapshot</url> -->

      <!-- GPL with Support -->
      <!-- <url>https://maven.sencha.com/repo/gxt-support-gpl-release</url> -->

    </repository>
  </repositories>

  <dependencies>
    <!-- GXT -->
    <!-- http://docs.sencha.com/gxt/3.1/getting_started/maven/Maven.html -->
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt</artifactId>
      <version>${gxt.version}</version>
    </dependency>
    <!-- GXT Charts -->
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt-chart</artifactId>
      <version>${gxt.version}</version>
    </dependency>
    <!-- GXT 3.1.0+ - Neptune Theme -->
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt-theme-neptune</artifactId>
      <version>${gxt.version}</version>
    </dependency>


    <!-- GWT -->
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwt.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-codeserver</artifactId>
      <version>${gwt.version}</version>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
